# xpynfo

./: .gitignore  .travis.yml  MANIFEST.in  README.rst  setup.cfg  tox.ini
xpynfo/: poc.py
