[metadata]
name = xpynfo
version = 0.0.0
author = CJ Harries
author_email = cj@wizardsoftheweb.pro
license = ISC
description = A handy, pretty-printing X window metadata CLI
long_description = file: README.rst
keywords =
    xlib
    xcb
    xorg
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: X11 Applications
url = https://github.com/wizardsoftheweb/xpynfo#readme
project_urls =
    Issue Tracker = https://github.com/wizardsoftheweb/xpynfo/issues

[bdist_wheel]
universal = 1

[options]
packages = find:
include_package_data = True
install_requires =
	pytest-runner
    anytree
    xcffib
tests_require =
	mock
	pytest

[options.entry_points]
console_scripts =
    xpynfo = xpynfo.poc:cli

[tool:pytest]
addopts = -v -x --color=yes

[aliases]
test = pytest


